feat(theme): load default portal theme from dist
move default definition.json from src/main/resources to an external folder

Closes gravitee-io/issues#4456